--- a/demomall-user-center/pom.xml
+++ b/demomall-user-center/pom.xml
@@ -100,6 +100,11 @@
             <artifactId>freemarker</artifactId>
         </dependency>
 
+        <!-- Sa-Token 权限认证，在线文档：https://sa-token.cc -->
+        <dependency>
+            <groupId>cn.dev33</groupId>
+            <artifactId>sa-token-spring-boot-starter</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
