--- a/demomall-product-center/src/main/resources/application.yml
+++ b/demomall-product-center/src/main/resources/application.yml
@@ -1,10 +1,10 @@
 server:
   port: 10400
   servlet:
-    context-path: /mall/comodity
+    context-path: /mall/product
 spring:
   application:
-    name: demomall-commoditycenter
+    name: demomall-product-center
   cloud:
     nacos:
       discovery:
