--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
         <module>demomall-user-center</module>
         <module>demomall-shop-center</module>
         <module>demomall-order-center</module>
-        <module>demomall-commodity-center</module>
+        <module>demomall-product-center</module>
     </modules>
 
 
