--- a/demomall-common/pom.xml
+++ b/demomall-common/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.qiang</groupId>
         <artifactId>demomall</artifactId>
-        <version>1.0.0</version>
+        <version>0.0.1-SNAPSHOT</version>
     </parent>
 
     <groupId>com.qiang</groupId>
@@ -34,6 +34,11 @@
         <dependency>
             <groupId>com.fasterxml.jackson.datatype</groupId>
             <artifactId>jackson-datatype-jsr310</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
         </dependency>
     </dependencies>
 
