--- a/demomall-gateway/pom.xml
+++ b/demomall-gateway/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.qiang</groupId>
         <artifactId>demomall</artifactId>
-        <version>1.0.0</version>
+        <version>0.0.1-SNAPSHOT</version>
     </parent>
 
     <groupId>com.qiang</groupId>
