--- a/demomall-user-center/pom.xml
+++ b/demomall-user-center/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.qiang</groupId>
         <artifactId>demomall</artifactId>
-        <version>1.0.0</version>
+        <version>0.0.1-SNAPSHOT</version>
     </parent>
 
 
@@ -19,7 +19,6 @@
     <properties>
 
     </properties>
-
 
     <dependencies>
 
