--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 
 
     <properties>
-        <qiang.version>1.0.0</qiang.version>
+        <qiang.version>0.0.1-SNAPSHOT</qiang.version>
 
         <java.version>17</java.version>
         <spring-cloud.version>2021.0.8</spring-cloud.version>
@@ -161,12 +161,12 @@
 
 
     <build>
-        <plugins>
+        <!--<plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
-        </plugins>
+        </plugins>-->
         <resources>
             <resource>
                 <directory>src/main/java</directory>
