--- a/pom.xml
+++ b/pom.xml
@@ -5,33 +5,36 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.7.14</version>
+        <version>3.1.3</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
     <groupId>com.qiang</groupId>
     <artifactId>demomall</artifactId>
-    <version>${qiang.version}</version>
+    <version>0.0.1-SNAPSHOT</version>
 
     <name>demomall</name>
     <packaging>pom</packaging>
 
 
     <properties>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+
         <qiang.version>0.0.1-SNAPSHOT</qiang.version>
 
         <java.version>17</java.version>
-        <spring-cloud.version>2021.0.8</spring-cloud.version>
-        <alibaba-cloud.version>2021.1</alibaba-cloud.version>
-        <dubbo.version>2.7.23</dubbo.version>
+        <spring-cloud.version>2022.0.4</spring-cloud.version>
+        <alibaba-cloud.version>2022.0.0.0</alibaba-cloud.version>
+        <dubbo.version>3.2.6</dubbo.version>
 
         <lombok.version>1.18.28</lombok.version>
         <mysql.version>8.0.30</mysql.version>
         <druid.version>1.2.18</druid.version>
         <mybatis-plus.version>3.5.3.2</mybatis-plus.version>
 
-        <servlet.version>4.0.1</servlet.version>
-        <hibernate-validator.version>6.2.5.Final</hibernate-validator.version>
+        <servlet.version>6.0.0</servlet.version>
+        <hibernate-validator.version>8.0.1.Final</hibernate-validator.version>
         <gson.version>2.10.1</gson.version>
         <jackson.version>2.13.5</jackson.version>
 
@@ -112,11 +115,26 @@
 
             <!-- servlet -->
             <dependency>
-                <groupId>javax.servlet</groupId>
-                <artifactId>javax.servlet-api</artifactId>
+                <groupId>jakarta.servlet</groupId>
+                <artifactId>jakarta.servlet-api</artifactId>
                 <version>${servlet.version}</version>
                 <scope>provided</scope>
             </dependency>
+
+            <dependency>
+                <groupId>javax.servlet</groupId>
+                <artifactId>javax.servlet-api</artifactId>
+                <version>4.0.1</version>
+                <scope>provided</scope>
+            </dependency>
+            <!-- https://mvnrepository.com/artifact/javax.validation/validation-api -->
+            <dependency>
+                <groupId>javax.validation</groupId>
+                <artifactId>validation-api</artifactId>
+                <version>2.0.1.Final</version>
+            </dependency>
+
+
 
             <dependency>
                 <groupId>org.hibernate.validator</groupId>
@@ -140,19 +158,17 @@
             <!-- Sa-Token 权限认证（Reactor响应式集成），在线文档：https://sa-token.cc -->
             <dependency>
                 <groupId>cn.dev33</groupId>
-                <artifactId>sa-token-reactor-spring-boot-starter</artifactId>
+                <artifactId>sa-token-reactor-spring-boot3-starter</artifactId>
+                <version>${sa-token.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>cn.dev33</groupId>
+                <artifactId>sa-token-spring-boot3-starter</artifactId>
                 <version>${sa-token.version}</version>
             </dependency>
             <dependency>
                 <groupId>cn.dev33</groupId>
                 <artifactId>sa-token-redis-jackson</artifactId>
-                <version>${sa-token.version}</version>
-            </dependency>
-
-            <!-- Sa-Token 权限认证，在线文档：https://sa-token.cc -->
-            <dependency>
-                <groupId>cn.dev33</groupId>
-                <artifactId>sa-token-spring-boot-starter</artifactId>
                 <version>${sa-token.version}</version>
             </dependency>
 
