1、添加支付服务 2、添加创建商品类目接口

--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,7 @@
         <module>demomall-shop-center</module>
         <module>demomall-order-center</module>
         <module>demomall-product-center</module>
+        <module>demomall-payment-center</module>
     </modules>
 
 
