--- a/demomall-payment-center/src/main/resources/application.yml
+++ b/demomall-payment-center/src/main/resources/application.yml
@@ -1,11 +1,11 @@
 server:
   port: 10300
   servlet:
-    context-path: /mall/order
+    context-path: /mall/pay
 
 spring:
   application:
-    name: demomall-ordercenter
+    name: demomall-paymentcenter
   cloud:
     nacos:
       discovery:
