--- a/demomall-shop-center/pom.xml
+++ b/demomall-shop-center/pom.xml
@@ -43,10 +43,10 @@
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
         </dependency>
-        <dependency>
+        <!--<dependency>
             <groupId>org.apache.dubbo</groupId>
             <artifactId>dubbo-spring-boot-starter</artifactId>
-        </dependency>
+        </dependency>-->
 
 
         <!--   springboot组件     -->
